# rougo

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
.artifacts/20260603-000248-6cd539e5-cb54-4fc3-8882-5130007ec1c2/: implementation_plan.artifact.md  task.artifact.md
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/selxo/rougo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/selxo/rougo/: AppSettings.kt  CrashReporting.kt  DialogsAndAppFlow.kt  DictionaryEngine.kt  DictionaryPopup.kt  ExportAndAlbumArt.kt  FfmpegRunner.kt  IntentUrlUtils.kt  LibraryManager.kt  LibraryModels.kt  LibraryPlanning.kt  LibraryScreen.kt  MainActivity.kt  MediaMetadataUtils.kt  MediaStreamImport.kt  PipePipeMediaExtractor.kt  PipePipeProviderDetection.kt  PipePipeStreamMapping.kt  PipePipeUrlNormalizer.kt  PlaybackPersistence.kt  PlayerScreen.kt  RuntimeCaches.kt  SettingsScreens.kt  ShadowAudioRecorder.kt  StreamRequestMetadata.kt  StreamUrlCache.kt  SubtitleUtils.kt  UpdateUtils.kt  VlcManager.kt  WaveformUtils.kt  WaveformViews.kt  YouTubeBrowserScreen.kt
app/src/main/java/com/selxo/rougo/dictionary/: DeinflectorRegistry.kt
app/src/main/java/com/selxo/rougo/dictionary/fr/: FrenchDeinflector.kt
app/src/main/java/com/selxo/rougo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/yausername/ffmpeg/: FFmpegExt.kt
app/src/main/java/com/yausername/youtubedl_android/: YoutubeDLException.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/selxo/rougo/: DictionaryLookupTest.kt  ExampleUnitTest.kt  LibraryPlanningTest.kt  PipePipeMediaExtractorTest.kt  PlaybackPersistenceTest.kt  StreamUrlCacheTest.kt  SubtitleCacheTest.kt  YouTubeBrowserScriptTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hoshidicts/: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Package.swift  README.md  build.gradle.kts  hoshidicts_jni.cpp  settings.gradle.kts
hoshidicts/benchmark/: import.cpp  lookup.cpp
hoshidicts/cli/: main.cpp
hoshidicts/include/hoshidicts/: importer.hpp  query.hpp
hoshidicts/src/: importer.cpp  lookup.cpp  query.cpp
hoshidicts/src/deconjugator/: deconjugator.cpp
hoshidicts/src/hash/: hash.cpp  hash.hpp
hoshidicts/src/json/: yomitan_parser.cpp
hoshidicts/src/main/cpp/: rougo_hoshi_jni.cpp
hoshidicts/src/main/java/de/manhhao/hoshi/: HoshiDicts.kt  Models.kt  RougoHoshi.kt
hoshidicts/src/text_processor/: text_processor.cpp
